# pyuryuomoco

./: LICENSE  README.md  pyproject.toml
pyuryuomoco/: cluster.py  substitution.py
pyuryuomoco/scripts/: translator.py
