[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyuryuomoco"
version = "0.1.0"
authors = [{ name = "Amelia Meyer", email = "agmlego@gmail.com" }]
description = "Python project to translate Uryuomoco"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ['Click', 'rich']

[project.scripts]
translator = "pyuryuomoco.scripts.translator:cli"

[project.urls]
Homepage = "https://github.com/agmlego/pyuryuomoco"
Issues = "https://github.com/agmlego/pyuryuomoco/issues"

[tool.hatch.build.targets.wheel]
packages = ["pyuryuomoco"]
